--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   gallery_saver: 2.3.2
   image_picker: ^1.0.4
   go_router: 6.0.2
+  provider: 6.0.5
+  shared_preferences: ^2.2.1
 
 dev_dependencies:
   flutter_test:
