--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ dependencies:
   go_router: 6.0.2
   provider: 6.0.5
   shared_preferences: ^2.2.1
+  flutter_riverpod: ^2.1.3
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.9.0
+  cloud_firestore: ^4.9.1
+  firebase_storage: ^11.2.6
 
 dev_dependencies:
   flutter_test:
